; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__writepack_append.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_odb_pack.c_pack_backend__writepack_append.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.git_odb_writepack = type { i32 }
%struct.pack_writepack = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.git_odb_writepack*, i8*, i64, i32*)* @pack_backend__writepack_append to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pack_backend__writepack_append(%struct.git_odb_writepack* %0, i8* %1, i64 %2, i32* %3) #0 {
  %5 = alloca %struct.git_odb_writepack*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.pack_writepack*, align 8
  store %struct.git_odb_writepack* %0, %struct.git_odb_writepack** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i32* %3, i32** %8, align 8
  %10 = load %struct.git_odb_writepack*, %struct.git_odb_writepack** %5, align 8
  %11 = bitcast %struct.git_odb_writepack* %10 to %struct.pack_writepack*
  store %struct.pack_writepack* %11, %struct.pack_writepack** %9, align 8
  %12 = load %struct.pack_writepack*, %struct.pack_writepack** %9, align 8
  %13 = call i32 @assert(%struct.pack_writepack* %12)
  %14 = load %struct.pack_writepack*, %struct.pack_writepack** %9, align 8
  %15 = getelementptr inbounds %struct.pack_writepack, %struct.pack_writepack* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load i8*, i8** %6, align 8
  %18 = load i64, i64* %7, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = call i32 @git_indexer_append(i32 %16, i8* %17, i64 %18, i32* %19)
  ret i32 %20
}

declare dso_local i32 @assert(%struct.pack_writepack*) #1

declare dso_local i32 @git_indexer_append(i32, i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
